# gestion-inventaire

./: .gitignore  .readthedocs.yaml  Lisez-moi.md  Makefile  README.md  afficher_dataframe.py  définir_db.py  exemple.py  inventaire.db  inventaire.py  onglets.py  readme.md  requirements.txt  référence.config  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  python-app.yml  python-publish.yml
docs/: conf.py  index.rst
outils/: db.py  df.py  onglets.py
polygphys/: __init__.py  __main__.py  base.cfg
polygphys/heures/: __init__.py  __main__.py  modeles.py
polygphys/heures/vieux/: Configuration.txt  debug.zsh  erreurs.txt  git.py  interface.py  mise_a_jour.py  requirements.txt  verifications.py
polygphys/inventaire/: __init__.py  __main__.py  modeles.py
polygphys/outils/: __main__.py  config.py  journal.py
polygphys/outils/appareils/: HP4274A 2.py  HP4274A.py  __init__.py
polygphys/outils/database/: __init__.py  __main__.py  dtypes.py
polygphys/outils/interface/: __init__.py  __main__.py  df.py  onglets.py  tableau.py  (+1 more)
polytechnique/: __init__.py  base.cfg  base.db  demo.py  inventaire.db  référence.config  référence.db
polytechnique/heures/: __init__.py  modeles.py
polytechnique/inventaire/: __init__.py  modeles.py
polytechnique/outils/: __init__.py  config.py  db.py  df 2.py  df.py  onglets.py
scripts/: essai_mysql.py  nouveau_certificat.py
src/polygphys/: __init__.py  __main__.py  base.cfg
tests/: test_polygphys.py
tests/entry_points/: __init__.py
tests/outils/: __init__.py  test_config.py  test_journal.py
(+57 files in other folders)
