[metadata]name = polytechniqueversion = 1description = Outils pour des programmes à l'interne du département de physique de Polytechnique Montréal.author = Émile Jetzerauthor_email = emile.jetzer@polymtl.calong_description = file: Lisez-moi.md[options]python_requires = >=3.8, <3.10install_requires =    pandas    sqlalchemypackages =    polytechnique    polytechnique.outilsinclude_package_data = True